# mercury

./: .env-template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  biome.json  catalog-info.yaml  compose.ci.yml  compose.override.yml  compose.yml  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  radixconfig.yaml  runbook.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  release-please-config.json  release-please-manifest.json
.github/workflows/: audit-api-dependencies.yaml  codeql.yml  create-release-pr.yaml  deploy-to-radix.yaml  deploy.yaml  generate-changelog.yaml  linting-and-checks.yaml  monthly-tests.yaml  on-pull-request.yaml  on-push-feature-branch.yaml  on-push-main-branch.yaml  on-release-dev.yaml  on-release-prod.yaml  on-release.yaml  on-tag.yaml  publish-docs.yaml  publish-images.yaml  publish.yaml  tests.yaml  upgrade-dependencies.yaml
.mise/: config.toml
.mise/tasks/: dependencies.toml  lint.toml  serve.toml  tests.toml  utilities.toml
IaC/: README.md  main.bicep
api/: .dockerignore  Dockerfile  compile.sh  docker-compose.yml  export_openapi.py  generate.sh  pyproject.toml
api/lib/: libifcoremt.so.5  libifport.so.5  libintlc.so.5
api/scripts/: export_openapi.py
api/src/: app.py  config.py  init.sh  libhg.pyi  pytest.ini
api/src/authentication/: authentication.py  mock_token_generator.py  models.py
api/src/cli/: __about__.py  cli.py
api/src/cli/commands/: run.py  version.py
api/src/common/: components.py  environment.py  exception_handling.py  exceptions.py  logger.py  logger_level.py  metrics.py  middleware.py  molecular_weights.py  responses.py  telemetry.py
api/src/common/entities/: base_model_wrapper.py  strict_model.py
api/src/common/utils/: arrays.py  enums.py  logger.py  tuples.py
api/src/entities/: Chemeq.py  ComponentResponse.py  Components.py  Multiflash.py  component_properties.py  multiflash.py
api/src/features/: get_routes.py
api/src/features/chemeq/: chemeq_feature.py  chemeq_use_case.py
api/src/features/component/: component_feature.py  component_response_model.py  component_use_case.py  get_components_use_case.py
api/src/features/health_check/: health_check_feature.py
api/src/features/metrics/: metrics_feature.py  metrics_use_case.py
api/src/features/multiflash/: multiflash_feature.py  multiflash_response_model.py  multiflash_use_case.py
api/src/features/whoami/: whoami_feature.py
api/src/info/: CompEXP.inf  UMR-NEW-groups.inf  UMR-NEW.uni  kijSRK.uni
api/src/tests/: conftest.py
api/src/tests/integration/: mock_token_generator.py
api/src/tests/integration/features/chemeq/: test_chemeq_feature.py
api/src/tests/integration/features/component/: test_component_feature.py
api/src/tests/integration/features/health_check/: test_health_check_feature.py
api/src/tests/integration/features/multiflash/: test_multiflash_feature.py
api/src/tests/integration/features/todo/: test_todo_feature.py
api/src/tests/integration/features/whoami/: test_whoami_feature.py
api/src/tests/test_data/: multiflash_data.py  multiflash_input.json  multiflash_output.json
api/src/tests/unit/entities/: test_chemeq.py  test_multiflash.py
api/src/tests/unit/features/calculate/: test_calculate.py
api/src/tests/unit/features/chemeq/: test_chemeq_use_case.py
api/src/tests/unit/features/multiflash/: test_multiflash_use_case.py
api/tests/: chemical & phase equilibria_results.txt  conftest.py  multiphase flash_results.txt  test_all.py
api/tests/integration/: conftest.py
api/tests/integration/features/component/: test_component_feature.py
api/tests/integration/features/health_check/: test_health_check_feature.py
api/tests/integration/features/multiflash/: test_multiflash_feature.py
api/tests/integration/features/whoami/: test_whoami_feature.py
api/tests/test_data/: multiflash_data.py
api/tests/unit/entities/: test_multiflash.py
api/tests/unit/features/multiflash/: test_multiflash_use_case.py
docs/: README.md  changelog.md  contributing.md  index.md  runbook.md
docs/_include/puml/: api-level-2.puml  api-level-3.puml  github-actions.puml
docs/developers/guide/: how-we-work.md  index.md  running.md  setup.md  testing.md  upgrading.md
docs/getting-started/: configuration.md  inital-setup.md  prerequisites.md  running.md
docs/how-to/: access-control.md  changelogs.md  commit-code.md  documentation.md  github-actions.md  openapi-generator.md  personal-access-token.md  pre-commit.md  upgrading.md
docs/tutorials/: authentication.md
nginx/: Dockerfile
web/: .eslintignore  .eslintrc.json  .pnp.cjs  .yarnrc.yml  Dockerfile  biome.json  generate-api-typescript-client.sh  index.html  kubb.config.ts  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.mts  vitest.config.ts
web/nginx/: nginx.conf
web/nginx/environments/: web.prod.conf
web/nginx/sites-available/: default.conf
web/public/: index.html  manifest.json  version.txt
web/src/: App.tsx  applicationInsight.js  auth.ts  authConfig.ts  constants.ts  index.tsx  router.tsx  setupTests.ts  tableUtils.ts  types.ts
web/src/api/: MercuryAPI.tsx  client.ts  generate-api-pre-commit.sh
web/src/common/: Card.tsx  Dialog.tsx  DynamicTable.tsx  ErrorBoundary.tsx  Header.tsx  VersionText.tsx  applicationInsight.js  constants.ts  tableUtils.ts  types.ts
web/src/common/assets/: EquinorLogo.tsx
web/src/componenets/common/: Header.tsx
web/src/components/: index.ts
web/src/components/Card/: Card.tsx  styles.ts
web/src/components/DynamicTable/: DynamicTable.tsx
web/src/components/ErrorState/: ErrorState.tsx  styles.ts
web/src/components/Flexbox/: Flexbox.tsx  styles.ts  types.ts
web/src/components/Popover/: Popover.tsx
web/src/components/common/: Card.tsx  DynamicTable.tsx  Header.tsx
web/src/components/feature/: CalculateFluid.tsx  CalculationInput.tsx  ComponentSelector.tsx  (+7 more)
web/src/feature/: Status.tsx
web/src/hooks/: useLocalStorage.tsx
web/src/pages/: Login.tsx  Main.test.tsx  Main.tsx  MainPage.test.tsx
(+58 files in other folders)
