[project]
name = "mercury"
version = "1.1.6" # x-release-please-version
description = "Mercury composition calculator REST API"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (==1.23)",
    "cachetools (>=5.5.2,<6.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "azure-monitor-opentelemetry (>=1.6.5,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"
httpx = "^0.28.1"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
namespace_packages = true

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 120        # This is the prefered line-length. ruff will _try_ to make this

lint.select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "S",   # Bandit
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "UP",  # automatically upgrade syntax for newer versions of the language
  "RUF", # ruff specific rules
]

lint.ignore = [
  "W191",   # conflict with ruff formatter
  "B008",   # do not perform function calls in argument defaults
  "E501",   # line too long (ruff formater is doing the best it can. Fix them yourself if you dont like the line length)
  "C901",   # Code complexity
  "RUF012", # Pydantic class variables
  "S101",   # Use of "assert"
]