[project]
name = "Mercury"
description = "Mercury composition calculator REST API"
dynamic = ["version"]
requires-python = ">=3.12"
license-files = ["LICENSE.md"]
dependencies = [
  "numpy~=2.1",
  "httpx>=0.28.1,<0.29",
  "cachetools~=6.2",
  "fastapi~=0.128",
  "pyjwt~=2.10",
  "pydantic~=2.12",
  "requests~=2.32",
  "click~=8.3",
  "uvicorn~=0.40",
  "pydantic-settings~=2.12",
  "azure-monitor-opentelemetry~=1.8.1",
  "opentelemetry-api~=1.39",
  "opentelemetry-instrumentation-fastapi~=0.57b1",
  "types-requests>=2.32.4.20260107",
  "types-cachetools>=6.2.0.20251022",
  "typer>=0.21.1",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=9.0", "ruff>=0.14.13", "mypy>=1.14.1"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cli/__about__.py"

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 120        # This is the prefered line-length. ruff will _try_ to make this

lint.select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "S",   # Bandit
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "UP",  # automatically upgrade syntax for newer versions of the language
  "RUF", # ruff specific rules
]

lint.ignore = [
  "W191",   # conflict with ruff formatter
  "B008",   # do not perform function calls in argument defaults
  "E501",   # line too long (ruff formater is doing the best it can. Fix them yourself if you dont like the line length)
  "C901",   # Code complexity
  "RUF012", # Pydantic class variables
  "S101",   # Use of "assert"
]

[tool.ruff.lint.isort]
extra-standard-library = ["libhg"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit", "tests/integration"]
