[project]
name = "Mercury"
description = "Mercury composition calculator REST API"
dynamic = ["version"]
requires-python = ">=3.13"
license-files = ["LICENSE.md"]
dependencies = [
  "numpy~=2.1",
  "httpx>=0.28.1,<0.29",
  "cachetools~=7.0",
  "fastapi~=0.128",
  "pyjwt~=2.10",
  "pydantic~=2.12",
  "uvicorn~=0.40",
  "pydantic-settings~=2.12",
  "azure-monitor-opentelemetry>=1.8.4",
  "opentelemetry-api>=1.39.0",
  "opentelemetry-instrumentation-fastapi>=0.60b0",
  "typer>=0.21.1",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=9.0.3",
  "ruff>=0.14.13",
  "mypy>=1.14.1",
  "mkdocs-techdocs-core>=1.4",
  "types-cachetools>=6.2.0.20251022",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cli/__about__.py"

[tool.ruff]
src = ["src", "tests"]
target-version = "py313"
line-length = 120        # This is the prefered line-length. ruff will _try_ to make this

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "S",    # Bandit (security)
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # automatically upgrade syntax for newer versions of the language
  "RUF",  # ruff specific rules
  "N",    # pep8-naming
  "SIM",  # flake8-simplify
  "PT",   # flake8-pytest-style
  "RET",  # flake8-return
  "FAST", # fastapi best practices
  "PIE",  # flake8-pie (misc. lints)
  "T20",  # flake8-print (no print statements)
  "ICN",  # flake8-import-conventions
  "LOG",  # flake8-logging
  "G",    # flake8-logging-format
  "DTZ",  # flake8-datetimez
  "FLY",  # flynt (f-string conversion)
  "PERF", # perflint (performance anti-patterns)
  "FURB", # refurb (modern Python idioms)
  "PLC",  # pylint conventions
  "PLE",  # pylint errors
  "TC",   # flake8-type-checking (move type-only imports behind TYPE_CHECKING)
  "FA",   # flake8-future-annotations
  "ISC",  # flake8-implicit-str-concat
  "RSE",  # flake8-raise
  "FBT",  # flake8-boolean-trap
  "A",    # flake8-builtins (shadowing builtins)
  "BLE",  # flake8-blind-except
  "YTT",  # flake8-2020 (sys.version checks)
]

ignore = [
  "E501",    # line too long (formatter handles this best-effort)
  "B008",    # function calls in argument defaults (required by FastAPI/Depends)
  "RUF012",  # Pydantic class variables (false positives with Pydantic models)
  "SIM102",  # collapsible-if (sometimes nested ifs are more readable)
  "PLC0415", # import-outside-top-level (intentional lazy imports in app factory/CLI)
  "N818",    # exception name Error suffix (ApplicationException is established naming)
  "PT003",   # Nice to have explicit fixture scope
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # assert usage is expected in tests

[tool.ruff.lint.isort]
extra-standard-library = ["libhg"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit", "tests/integration"]
